fix issue with current navlink underline on mobile

--- a/CSS/general.css
+++ b/CSS/general.css
@@ -344,6 +344,7 @@ footer {
 
     .nav-links a {
         font-size: 0.9rem;
+        position: relative;
     }
 
     .hero {
